Correction de la marge nécessaire au bon affichage du menu collapse

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 /*------GENERAL------*/
 body {
-    font-family: "Ubuntu"
+    font-family: "Ubuntu";
+    
 }
 
 h1 {
@@ -72,6 +73,10 @@ nav {
     color: white;
     background-color: black;
     width: 100%
+}
+
+.badge {
+    background-color: black;
 }
 
 .btn_menu_top {
